Bug 319040 - crash on startup
Summary: crash on startup
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: 0.6.1
Platform: Ubuntu Linux
: NOR crash
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
: 319263 319423 319720 320872 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-04-29 00:19 UTC by Don
Modified: 2016-03-12 09:05 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.6.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Don 2013-04-29 00:19:52 UTC
Application: ktp-contactlist (0.6.1)
KDE Platform Version: 4.10.2
Qt Version: 4.8.4
Operating System: Linux 3.8.0-19-generic x86_64
Distribution: Ubuntu 13.04

-- Information about the crash:
- What I was doing when the application crashed: booted the computer for the first time, the applicarion was running from the previous day, it was save by the session manage to start automatically with the computer boot

The crash can be reproduced sometimes.

-- Backtrace:
Application: KDE Telepathy Contact List (ktp-contactlist), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[KCrash Handler]
#6  QWidgetPrivate::createExtra (this=this@entry=0x0) at kernel/qwidget.cpp:1785
#7  0x00007fc829dfdd0c in QWidget::setMaximumHeight (this=0x664440 <QString::shared_null>, h=28) at kernel/qwidget.cpp:4207
#8  0x0000000000441401 in GlobalPresenceChooser::repositionOverlays (this=this@entry=0x11c3440) at /build/buildd/ktp-contact-list-0.6.1/global-presence-chooser.cpp:411
#9  0x000000000044156d in onConnectionStatusChanged (this=0x11c3440, connectionStatus=<optimized out>) at /build/buildd/ktp-contact-list-0.6.1/global-presence-chooser.cpp:401
#10 GlobalPresenceChooser::onConnectionStatusChanged (this=0x11c3440, connectionStatus=<optimized out>) at /build/buildd/ktp-contact-list-0.6.1/global-presence-chooser.cpp:398
#11 0x0000000000444170 in GlobalPresenceChooser::GlobalPresenceChooser (this=0x11c3440, parent=<optimized out>) at /build/buildd/ktp-contact-list-0.6.1/global-presence-chooser.cpp:191
#12 0x00000000004408ba in Ui_MainWindow::setupUi (this=this@entry=0x11f76a0, MainWindow=MainWindow@entry=0x11f7670) at /build/buildd/ktp-contact-list-0.6.1/obj-x86_64-linux-gnu/ui_main-widget.h:55
#13 0x000000000043e3ef in MainWidget::MainWidget (this=0x11f7670, parent=<optimized out>) at /build/buildd/ktp-contact-list-0.6.1/main-widget.cpp:84
#14 0x000000000041bfb0 in main (argc=3, argv=0x7ffff469f198) at /build/buildd/ktp-contact-list-0.6.1/main.cpp:59

Reported using DrKonqi
Comment 1 David Edmundson 2013-04-29 11:58:34 UTC
Git commit 6e5cdec43c02ae14133f8fca4c78adf30437ddbc by David Edmundson.
Committed on 29/04/2013 at 03:03.
Pushed by davidedmundson into branch 'kde-telepathy-0.6'.

Rearrange GlobalPresence startup to avoid crash
REVIEW: 110235

M  +5    -6    global-presence-chooser.cpp

http://commits.kde.org/telepathy-contact-list/6e5cdec43c02ae14133f8fca4c78adf30437ddbc
Comment 2 Martin Klapetek 2013-05-03 09:44:11 UTC
*** Bug 319263 has been marked as a duplicate of this bug. ***
Comment 3 David Edmundson 2013-05-06 20:11:28 UTC
*** Bug 319423 has been marked as a duplicate of this bug. ***
Comment 4 David Edmundson 2013-05-12 13:25:26 UTC
*** Bug 319720 has been marked as a duplicate of this bug. ***
Comment 5 David Edmundson 2013-06-07 17:18:47 UTC
*** Bug 320872 has been marked as a duplicate of this bug. ***