Rearrange GlobalPresence startup to avoid crash

BUG: 319040
REVIEW: 110235